--- a/project.swan.json
+++ b/project.swan.json
@@ -13,15 +13,15 @@
     "publish": {
         "hideTips": true,
         "tips": [],
-        "version": "0.5.4"
+        "version": "1.0.0"
     },
     "setting": {
         "urlCheck": false
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.200.116",
-            "extensionJsVersion": "1.15.3"
+            "extensionJsVersion": "1.15.3",
+            "swanJsVersion": "3.200.116"
         }
     }
 }
