--- a/components/gov-icon/package.json
+++ b/components/gov-icon/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "smt-calendar",
+  "name": "gov-icon",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC"
 }
