--- a/project.swan.json
+++ b/project.swan.json
@@ -3,25 +3,27 @@
     "compilation-args": {
         "common": {
             "enhance": true
-        }
+        },
+        "options": [],
+        "selected": -3
     },
     "host": "baiduboxapp",
     "preview": {
-        "packageId": 734408
+        "packageId": 843154
     },
-    "projectname": "小蓝便笺",
+    "projectname": "blue-note",
     "publish": {
         "hideTips": true,
         "tips": [],
-        "version": "1.0.0"
+        "version": "1.0.2"
     },
     "setting": {
         "urlCheck": false
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "1.15.3",
-            "swanJsVersion": "3.200.116"
+            "swanJsVersion": "3.320.32",
+            "extensionJsVersion": "1.21.2"
         }
     }
 }
